@@ -1,3 +1,13 @@
+r103 - september, 12, 2009
+    * /web/install.php : has been removed to avoid loop issue
+    * /lib/vendor/phoogle/phoogle.php : we prevent error when using function
+      file_get_contents with Yahoo API
+    * /lib/misc/DbTools.class.php : checkMySQLConnection() method has been set
+      as public static instead of being private
+    * README : up to date
+    * README-FR : up to date
+
+
 r102 - september, 12, 2009
     * update : new template 'performError.php'
     * PiwamDataPeer : new retrieveByKey($key) method
